--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,12 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
+
+        debug {
+            minifyEnabled false
+            debuggable true
+            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+        }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
@@ -66,6 +72,7 @@ dependencies {
     implementation "androidx.recyclerview:recyclerview:1.3.2"
     implementation "androidx.activity:activity-ktx:1.9.1"
     implementation 'androidx.cardview:cardview:1.0.0'
+    implementation 'androidx.activity:activity:1.9.1'
 
     //Glide
     def glide_version = "4.12.0"
