updated splashscreen behaviour, eliminated the layout xml file, it is no longer needed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
             android:name=".views.activities.SplashScreenActivity"
             android:exported="true"
             android:screenOrientation="portrait"
-            android:theme="@style/SplashTheme">
+            android:theme="@style/Theme.Teensecure.SplashScreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
