feat: Implement level selection functionality in FragmentSelectLevel
- Added click listeners for beginner, intermediate, and professional level buttons.
- Updated visibility and images based on user selection.
- Integrated proceed button logic to navigate to the next fragment.
- Displayed a Toast message if no level is selected before proceeding.
- Created a new fragment to handle the next step in the user journey after level selection.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -111,6 +111,8 @@ dependencies {
 
     implementation 'androidx.viewpager2:viewpager2:1.1.0'
 
+    implementation 'com.afollestad.material-dialogs:core:3.3.0'
+
 }
 kapt {
     correctErrorTypes true
