--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,7 +26,7 @@ android {
     android.applicationVariants.configureEach { variant ->
         variant.outputs.configureEach { output ->
             def formattedDate = new Date().format('dd-MMM-yyyy')
-            outputFileName = "Jamit-${variant.buildType.name.toLowerCase()}-v${defaultConfig.versionName}-${formattedDate}.apk".replace("--", "-")
+            outputFileName = "TeenSecure-${variant.buildType.name.toLowerCase()}-v${defaultConfig.versionName}-${formattedDate}.apk".replace("--", "-")
         }
     }
 
@@ -56,7 +56,6 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'androidx.core:core-ktx:1.13.1'
     implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'com.google.android.material:material:1.12.0'
