feat: Add course content for Teen Secure topics and levels
- Added course content for Phishing, Baiting, Impersonation, and Cyberbullying topics.
- Created beginner, intermediate, and advanced levels for each topic.
- Completed Advanced Level for Cyberbullying, including sections on doxxing, trolling, and defamation.
- Structured the content to include learning points and tips for each level.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,10 @@ android {
         dataBinding true
         viewBinding true
     }
+    configurations {
+        all*.exclude module: 'okhttp'
+        all*.exclude module: 'okio'
+    }
 }
 
 dependencies {
