feat: Implement drag-and-drop functionality for quiz questions and retrieve new item order
- Added RecyclerView to handle drag-and-drop for DragAndDrop question type
- Created DragAndDropAdapter to manage and rearrange quiz items dynamically
- Implemented ItemTouchHelper for drag-and-drop interactions
- Added method to retrieve the new order of items after rearrangement

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -119,6 +119,8 @@ dependencies {
     // Lottiefiles animation
     implementation 'com.airbnb.android:lottie:6.5.2'
 
+    implementation 'com.github.zhpanvip:viewpagerindicator:1.2.3'
+
 }
 kapt {
     correctErrorTypes true
